# discord-lastfm-rich-presence

./: LICENSE.txt  README.md  config.toml.example  pyproject.toml
disclfmpresence/: __init__.py  config.py  exceptions.py  lastfm.py
