[tool.poetry]
name = "disclfmpresence"
version = "0.1.0"
description = ""
authors = ["Tiago Dias <tiago@tdias.pt>"]
license = "BSD-3-clause"

[tool.poetry.dependencies]
python = "^3.9"
pypresence = "^4.2.0"
tomli = "^1.2.0"
pydantic = "^1.8.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dlfm = 'disclfmpresence:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
